--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,7 @@ path = "src/numdifftools/__init__.py"
 build-docs-html = "sphinx-build -b html docs docs/_build/html -d docs/_build/doctrees"
 build-docs-latex = "sphinx-build -b latex docs docs/_build/latex -d docs/_build/doctrees"
 build-docs-pdf = "sphinx-build -b latexpdf docs docs/_build/latex -d docs/_build/doctrees"
+doctest = "sphinx-build -b doctest docs docs/_build/doctest -d docs/_build/doctrees"
 lock_py314 = "pdm lock -L pdm.lock314 --python 3.14 --strategy no_direct_minimal_versions -dG all"
 lock_win64 = "pdm lock -L pdm_windows.lock --python 3.13 --strategy no_direct_minimal_versions --platform windows -dG all"
 lock_linux = "pdm lock -L pdm_linux.lock --python 3.13 --strategy no_direct_minimal_versions --platform linux -dG all"
